--- a/.dotfiles/vscodium/.config/VSCodium/User/settings.json
+++ b/.dotfiles/vscodium/.config/VSCodium/User/settings.json
@@ -1,20 +1,18 @@
 {
-    // telemetry & data sharing
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
     "telemetry.telemetryLevel": "off",
     "extensions.ignoreRecommendations": true,
     "workbench.settings.enableNaturalLanguageSearch": false,
 
-    // vim
     "editor.cursorBlinking": "solid",
     "editor.cursorStyle": "line",
     "vim.useSystemClipboard": true,
 
-    // personal preferences
     "editor.minimap.enabled": false,
     "editor.wordWrap": "on",
     "terminal.integrated.sendKeybindingsToShell": true,
     "workbench.startupEditor": "none",
     "workbench.age.walkthroughs.openOnInstall": false,
+    "git.openRepositoryInParentFolders": "never",
 }
