--- a/.dotfiles/tmux/.tmux.conf
+++ b/.dotfiles/tmux/.tmux.conf
@@ -1,7 +1,13 @@
+# prefix key remap
 unbind C-b
 set -g prefix `
 bind-key e send-prefix
 bind-key ` last-window
+
+# mouse wheel scroll
+set-option -g mouse on
+set-option -s set-clipboard off
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 
 # vim-like navigation
 bind -r k select-pane -U
